date header in track files

--- a/telegraf.conf
+++ b/telegraf.conf
@@ -418,24 +418,24 @@
 
 
 # # Read metrics about disk usage by mount point
-# [[inputs.disk]]
+[[inputs.disk]]
 #   ## By default, telegraf gather stats for all mountpoints.
 #   ## Setting mountpoints will restrict the stats to the specified mountpoints.
 #   # mount_points = ["/"]
 
 #   ## Ignore some mountpoints by filesystem type. For example (dev)tmpfs (usually
 #   ## present on /run, /var/run, /dev/shm or /dev).
-#   ignore_fs = ["tmpfs", "devtmpfs"]
+  ignore_fs = ["tmpfs", "devtmpfs"]
 
 
 # # Read metrics about disk IO by device
-# [[inputs.diskio]]
-#   ## By default, telegraf will gather stats for all devices including
-#   ## disk partitions.
-#   ## Setting devices will restrict the stats to the specified devices.
-#   # devices = ["sda", "sdb"]
-#   ## Uncomment the following line if you do not need disk serial numbers.
-#   # skip_serial_number = true
+[[inputs.diskio]]
+  ## By default, telegraf will gather stats for all devices including
+  ## disk partitions.
+  ## Setting devices will restrict the stats to the specified devices.
+  # devices = ["sda", "sdb"]
+  ## Uncomment the following line if you do not need disk serial numbers.
+  skip_serial_number = true
 
 
 # # Get kernel statistics from /proc/stat
