--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "gnuplot-palettes"]
 	path = gnuplot-palettes
 	url = git@github.com:Gnuplotting/gnuplot-palettes.git
+[submodule "svganimator"]
+	path = svganimator
+	url = git@github.com:sangaline/svganimator.git
