--- a/telegraf.conf
+++ b/telegraf.conf
@@ -32,11 +32,11 @@
 
   ## Telegraf will send metrics to outputs in batches of at
   ## most metric_batch_size metrics.
-  metric_batch_size = 1000
+  metric_batch_size = 10000
   ## For failed writes, telegraf will cache metric_buffer_limit metrics for each
   ## output, and will flush this buffer on a successful write. Oldest metrics
   ## are dropped first when this buffer fills.
-  metric_buffer_limit = 10000
+  metric_buffer_limit = 100000
 
   ## Collection jitter is used to jitter the collection by a random amount.
   ## Each plugin will sleep for a random time within jitter before collecting.
@@ -46,7 +46,7 @@
 
   ## Default flushing interval for all outputs. You shouldn't set this below
   ## interval. Maximum flush_interval will be flush_interval + flush_jitter
-  flush_interval = "10s"
+  flush_interval = "30s"
   ## Jitter the flush interval by a random amount. This is primarily to avoid
   ## large write spikes for users running a large number of telegraf instances.
   ## ie, a jitter of 5s and interval 10s means flushes will happen every 10-15s
@@ -72,29 +72,29 @@
 ###############################################################################
 
 # Configuration for influxdb server to send metrics to
-# [[outputs.influxdb]]
-#   ## The full HTTP or UDP endpoint URL for your InfluxDB instance.
-#   ## Multiple urls can be specified as part of the same cluster,
-#   ## this means that only ONE of the urls will be written to each interval.
-#   # urls = ["udp://localhost:8089"] # UDP endpoint example
-#   urls = ["http://localhost:8086"] # required
-#   ## The target database for metrics (telegraf will create it if not exists).
-#   database = "telegraf" # required
+[[outputs.influxdb]]
+  ## The full HTTP or UDP endpoint URL for your InfluxDB instance.
+  ## Multiple urls can be specified as part of the same cluster,
+  ## this means that only ONE of the urls will be written to each interval.
+  # urls = ["udp://localhost:8089"] # UDP endpoint example
+  urls = ["http://localhost:9096"] # required
+  ## The target database for metrics (telegraf will create it if not exists).
+  database = "condo_telegraf" # required
 
-#   ## Retention policy to write to. Empty string writes to the default rp.
-#   retention_policy = ""
-#   ## Write consistency (clusters only), can be: "any", "one", "quorom", "all"
-#   write_consistency = "any"
+  ## Retention policy to write to. Empty string writes to the default rp.
+  retention_policy = ""
+  ## Write consistency (clusters only), can be: "any", "one", "quorom", "all"
+  write_consistency = "any"
 
-#   ## Write timeout (for the InfluxDB client), formatted as a string.
-#   ## If not provided, will default to 5s. 0s means no timeout (not recommended).
-#   timeout = "5s"
+  ## Write timeout (for the InfluxDB client), formatted as a string.
+  ## If not provided, will default to 5s. 0s means no timeout (not recommended).
+  timeout = "5s"
   # username = "telegraf"
   # password = "metricsmetricsmetricsmetrics"
-  ## Set the user agent for HTTP POSTs (can be useful for log differentiation)
-  # user_agent = "telegraf"
-  ## Set UDP payload size, defaults to InfluxDB UDP Client default (512 bytes)
-  # udp_payload = 512
+  #Set the user agent for HTTP POSTs (can be useful for log differentiation)
+  user_agent = "telegraf"
+  #Set UDP payload size, defaults to InfluxDB UDP Client default (512 bytes)
+  udp_payload = 512
 
   ## Optional SSL Config
   # ssl_ca = "/etc/telegraf/ca.pem"
@@ -195,16 +195,16 @@
 
 
 # # Configuration for Graphite server to send metrics to
-[[outputs.graphite]]
-  ## TCP endpoint for your graphite instance.
-  servers = ["localhost:9003"]
-  ## Prefix metrics name
-  prefix = ""
-  ## Graphite output template
-  ## see https://github.com/influxdata/telegraf/blob/master/docs/DATA_FORMATS_OUTPUT.md
-  template = "host.tags.measurement.field"
-  ## timeout in seconds for the write connection to graphite
-  timeout = 2
+# [[outputs.graphite]]
+#   ## TCP endpoint for your graphite instance.
+#   servers = ["localhost:9003"]
+#   ## Prefix metrics name
+#   prefix = ""
+#   ## Graphite output template
+#   ## see https://github.com/influxdata/telegraf/blob/master/docs/DATA_FORMATS_OUTPUT.md
+#   template = "host.tags.measurement.field"
+#   ## timeout in seconds for the write connection to graphite
+#   timeout = 2
 
 
 # # Send telegraf metrics to graylog(s)
